# CELEBAL-EXCELLENCE-INTERNSHIP-_ASSIGNMENT

./: .gitignore  Dockerfile  README.md  requirements.txt  week1_harsh.ipynb  week2_harsh.ipynb  week3_harsh.ipynb  week4_harsh.ipynb  week5_harsh.ipynb  week6_harsh (1).ipynb  week_8_harsh.ipynb
Data Co-Pilot/: README.md  SPACES_README.md  dev.bat  render.yaml  start.bat
Data Co-Pilot/backend/uploads/: bd1829a7-10b0-4751-8b0c-bd2dbfdbbe10.xlsx
Data Co-Pilot/frontend/src/: api.ts  index.css
Data Co-Pilot/frontend/src/components/: AgentTrace.tsx  DataPreview.tsx  Header.tsx
agent_project/backend/: app.py
agent_project/frontend/: index.html
backend/: .env.example  agent.py  app.py  rag.py  sandbox.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: QueryConsole.tsx  ResultCard.tsx  UploadPanel.tsx
week7_harsh/: .env.example  .gitignore  README.md  pyproject.toml
week7_harsh/data/sample_docs/: README.txt
week7_harsh/src/rag_system/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  evaluation.py  generation.py  ingestion.py  logging_setup.py  pipeline.py  reranker.py  retrieval.py  vector_store.py
week7_harsh/tests/: test_rag_system.py
week8_harsh/: README.md
week8_harsh/backend/: agent.py
