[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-system"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation system for document Q&A"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Document loading
    "pypdf==4.3.1",
    "python-docx==1.1.2",

    # Text processing & chunking
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.25",
    "langchain-text-splitters==0.2.4",
    "tiktoken==0.7.0",

    # Embeddings - local model support
    "sentence-transformers==3.1.1",

    # Vector store
    "chromadb==0.5.18",

    # Hybrid search
    "rank-bm25==0.2.2",

    # Reranking
    "flashrank==0.2.9",

    # LLM
    "openai==1.51.2",

    # Evaluation
    "ragas==0.1.21",
    "datasets==3.0.1",

    # CLI
    "typer==0.12.5",
    "rich==13.8.1",

    # Config & utilities
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "loguru==0.7.2",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[project.scripts]
rag = "rag_system.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
